5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3812/executions/1594_1800.log
== SUBMITION (2019-03-23 16:12:28) 
-- CODE:
a = float(input('digite a: '))
b = float(input('digite b: '))
c = float(input('digite c: '))

N = a**2 + b**2 + c**2
D = a + b + c

T = N / D

print(T)
-- EXECUTION TIME:
0.166049
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666666666666668
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203045685
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.15094339622641
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 16:12:35) 
-- CODE:
a = float(input('digite a: '))
b = float(input('digite b: '))
c = float(input('digite c: '))

N = a**2 + b**2 + c**2
D = a + b + c

T = N / D

print(T)
-- OUTPUT:
25.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 16:13:16) 
-- CODE:
a = float(input('digite a: '))
b = float(input('digite b: '))
c = float(input('digite c: '))

N = (a**2 + b**2 + c**2) / ( a + b + c)
print(N)
-- EXECUTION TIME:
0.193202
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
digite a: digite b: digite c: 25.666666666666668
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
digite a: digite b: digite c: 342.8680203045685
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
digite a: digite b: digite c: 106.15094339622641
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 16:13:47) 
-- CODE:
a = float(input('digite a: '))
b = float(input('digite b: '))
c = float(input('digite c: '))

N = (a**2 + b**2 + c**2) / ( a + b + c)
print(round(N,7))
-- EXECUTION TIME:
0.202547
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 16:14:49) 
-- CODE:
a = float(input('digite a: '))
b = float(input('digite b: '))
c = float(input('digite c: '))

N = (a**2 + b**2 + c**2) / ( a + b + c)
print(round(N,7)
-- ERROR:
File "XXXX", line 7
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 16:14:54) 
-- CODE:
a = float(input('digite a: '))
b = float(input('digite b: '))
c = float(input('digite c: '))

N = (a**2 + b**2 + c**2) / ( a + b + c)
print(round(N,7))
-- EXECUTION TIME:
0.237671
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 16:19:26) 
-- CODE:
a = float(input('digite a: '))
b = float(input('digite b: '))
c = float(input('digite c: '))

N = (a**2 + b**2 + c**2) / ( a + b + c)
print(round(N,7))
-- EXECUTION TIME:
0.280429
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
